--- a/package.json
+++ b/package.json
@@ -29,7 +29,19 @@
     "logLevel": "debug",
     "log": "./logs/server.log",
     "accessLog": "./logs/access.log",
-    "host": "api.case-based-reasoning.org"
+    "database": {
+      "url": "mongodb://mongo:27017",
+      "name": "exhibition",
+      "options": {
+        "useNewUrlParser": true,
+        "auth": {
+          "user": "root"
+        }
+      }
+    },
+    "cors": [
+      "foto-labor.org"
+    ]
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -62,6 +74,8 @@
     "mongodb": "^3.5.2",
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.6",
+    "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
     "rxjs": "^6.5.4",
     "semver": "^7.1.3",
     "uuid": "^7.0.3"
