--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "lodash": "^4.17.15",
     "mongodb": "^3.5.2",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
