--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
+    "jpg-stream": "^1.1.2",
     "lodash": "^4.17.15",
     "mongodb": "^3.5.2",
     "morgan": "^1.9.1",
